--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Galactic bot something idk",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/IDcLuc/galacticbot"
   },
-  "author": "Luc",
+  "author": "IDcLuc",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/IDcLuc/galacticbot/issues"
@@ -24,6 +24,7 @@
     "mongoose": "^6.4.1",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.19",
     "npm": "^8.13.1"
-  } 
+  }
 }
